--- a/BirdGame/BirdGame.vcxproj
+++ b/BirdGame/BirdGame.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -17,6 +17,45 @@
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\Bird.cpp" />
+    <ClCompile Include="src\Consumable.cpp" />
+    <ClCompile Include="src\Engine.cpp" />
+    <ClCompile Include="src\Entity.cpp" />
+    <ClCompile Include="src\GameData.cpp" />
+    <ClCompile Include="src\GameScene.cpp" />
+    <ClCompile Include="src\AudioPlayer.cpp" />
+    <ClCompile Include="src\MenuScene.cpp" />
+    <ClCompile Include="src\Particle.cpp" />
+    <ClCompile Include="src\Projectile.cpp" />
+    <ClCompile Include="src\ResourceLoader.cpp" />
+    <ClCompile Include="src\Scene.cpp" />
+    <ClCompile Include="src\sft.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Bird.h" />
+    <ClInclude Include="src\Engine.h" />
+    <ClInclude Include="src\GameData.h" />
+    <ClInclude Include="src\GameScene.h" />
+    <ClInclude Include="src\Entity.h" />
+    <ClInclude Include="src\HatEntity.h" />
+    <ClInclude Include="src\AudioPlayer.h" />
+    <ClInclude Include="src\MenuScene.h" />
+    <ClInclude Include="src\ResourceLoader.h" />
+    <ClInclude Include="src\sft.h" />
+    <ClInclude Include="src\InputData.h" />
+    <ClInclude Include="src\Particle.h" />
+    <ClInclude Include="src\Projectile.h" />
+    <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\Consumable.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="res\GiantRobotArmy-Medium.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\Pigeon_flying v1.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -76,7 +115,12 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\sfml\include</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>C:\sfml\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freetype.lib;gdi32.lib;opengl32.lib;sfml-window-d.lib;sfml-graphics-d.lib;sfml-audio-d.lib;winmm.lib;sfml-system-d.lib;kernel32.lib;user32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -84,7 +128,12 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\sfml\include</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>C:\sfml\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freetype.lib;gdi32.lib;opengl32.lib;sfml-window-d.lib;sfml-graphics-d.lib;sfml-audio-d.lib;winmm.lib;sfml-system-d.lib;kernel32.lib;user32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -94,10 +143,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\sfml\include</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>SFML_STATIC;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>C:\sfml\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freetype.lib;gdi32.lib;opengl32.lib;sfml-window.lib;sfml-graphics.lib;sfml-audio.lib;winmm.lib;sfml-system.lib;kernel32.lib;user32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -108,14 +161,16 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\sfml\include</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>SFML_STATIC;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>C:\sfml\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freetype.lib;gdi32.lib;opengl32.lib;sfml-window.lib;sfml-graphics.lib;sfml-audio.lib;winmm.lib;sfml-system.lib;kernel32.lib;user32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
